updated few spellings and grammar.

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
       <div class="swiper-wrapper">
 
          <div class="swiper-slide slide">
-            <p>Fabulous job by these guys. They gave me a really good offer on thier 1st anniversary. :)</p>
+            <p>Fabulous job by these guys. They gave me a really good offer on their 1st anniversary. :)</p>
             <div class="user">
                
                <div class="info">
@@ -294,7 +294,7 @@
          </div>
 
          <div class="swiper-slide slide">
-            <p>I was amazed by their impeccable work. They even did a very windup job.</p>
+            <p>I was amazed by their impeccable work. They even did a very good windup job.</p>
             <div class="user">
                
                <div class="info">
